--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="./css/modern-normalize.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <header class="header">
   <div class="container header-flex-container">
@@ -62,23 +62,23 @@
       <h2 hidden>Портфолио</h2>
       <ul class="button-list flex-container">
         <li class="button-li">
-          <button class="portfolio-btn button all" type="button">Все</button>
+          <button class="button current-btn" type="button">Все</button>
         </li>
         <li class="button-li">
-          <button class="portfolio-btn button" type="button">
+          <button class="button" type="button">
             Веб-сайты
           </button>
         </li>
         <li class="button-li">
-          <button class="portfolio-btn button" type="button">
+          <button class="button" type="button">
             Приложения
           </button>
         </li>
         <li class="button-li">
-          <button class="portfolio-btn button" type="button">Дизайн</button>
+          <button class="button" type="button">Дизайн</button>
         </li>
         <li class="button-li">
-          <button class="portfolio-btn button" type="button">
+          <button class="button" type="button">
             Маркетинг
           </button>
         </li>
