--- a/portfolio.html
+++ b/portfolio.html
@@ -61,23 +61,23 @@
     <div class="container">
       <h2 hidden>Портфолио</h2>
       <ul class="button-list flex-container">
-        <li class="button-li">
+        <li class="button-list__li">
           <button class="button current-btn" type="button">Все</button>
         </li>
-        <li class="button-li">
+        <li class="button-list__li">
           <button class="button" type="button">
             Веб-сайты
           </button>
         </li>
-        <li class="button-li">
+        <li class="button-list__li">
           <button class="button" type="button">
             Приложения
           </button>
         </li>
-        <li class="button-li">
+        <li class="button-list__li">
           <button class="button" type="button">Дизайн</button>
         </li>
-        <li class="button-li">
+        <li class="button-list__li">
           <button class="button" type="button">
             Маркетинг
           </button>
@@ -85,139 +85,139 @@
       </ul>
       <!-- img list -->
       <ul class="flex-container-wrap flex-container">
-        <li class="projects-img-block">
-          <a class="a-tag-portfolio" href="#">
-            <div class="projects-hover-block">
+        <li class="projects">
+          <a class="projects__link" href="#">
+            <div class="projects__hover-block">
               <img class="img-tag" src="./images/portfolio/portfolio(1).jpg" width="370" alt="Логотип проекта" />
-              <p class="projects-hover-text">
+              <p class="projects__hover-text">
                 Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
                 цифрового шпионажа и атак на защищённые сервера конкурентов.
               </p>
             </div>
-            <div class="projects-text">
-              <h3 class="projects-name">Технокряк</h3>
-              <p class="projects-descrition">Веб-сайт</p>
+            <div class="projects__text-block">
+              <h3 class="projects__name">Технокряк</h3>
+              <p class="projects__description">Веб-сайт</p>
             </div>
           </a>
         </li>
-        <li class="projects-img-block">
-          <a class="a-tag-portfolio" href="#">
-            <div class="projects-hover-block">
+        <li class="projects">
+          <a class="projects__link" href="#">
+            <div class="projects__hover-block">
               <img class="img-tag" src="./images/portfolio/portfolio(2).jpg" width="370" alt="Логотип проекта" />
-              <p class="projects-hover-text">
+              <p class="projects__hover-text">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, libero porro! Animi, totam accusamus.
                 Rerum voluptate corrupti neque nostrum tempora vero alias provident excepturi. Sunt aspernatur veritatis
                 minus reiciendis quaerat.
 
               </p>
             </div>
-            <div class="projects-text">
-              <h3 class="projects-name">Постер New Orlean vs Golden Star</h3>
-              <p class="projects-descrition">Дизайн</p>
+            <div class="projects__text-block">
+              <h3 class="projects__name">Постер New Orlean vs Golden Star</h3>
+              <p class="projects__description">Дизайн</p>
             </div>
           </a>
         </li>
-        <li class="projects-img-block">
-          <a class="a-tag-portfolio" href="#">
-            <div class="projects-hover-block">
+        <li class="projects">
+          <a class="projects__link" href="#">
+            <div class="projects__hover-block">
               <img class="img-tag" src="./images/portfolio/portfolio(3).jpg" width="370" alt="Логотип проекта" />
-              <p class="projects-hover-text">
+              <p class="projects__hover-text">
                 Коронное блюдо - суп с летучей мыши.
               </p>
             </div>
-            <div class="projects-text">
-              <h3 class="projects-name">Ресторан Seafood</h3>
-              <p class="projects-descrition">Приложение</p>
+            <div class="projects__text-block">
+              <h3 class="projects__name">Ресторан Seafood</h3>
+              <p class="projects__description">Приложение</p>
             </div>
           </a>
         </li>
-        <li class="projects-img-block">
-          <a class="a-tag-portfolio" href="#">
-            <div class="projects-hover-block">
+        <li class="projects">
+          <a class="projects__link" href="#">
+            <div class="projects__hover-block">
               <img class="img-tag" src="./images/portfolio/portfolio(4).jpg" width="370" alt="Логотип проекта" />
-              <p class="projects-hover-text">
+              <p class="projects__hover-text">
                 dipisicing elit. Placeat, libero porro! Animi, totam accusamus. Rerum voluptate corrupti neque nostrum
                 tempora vero alias provident excepturi. Sunt aspernatur veritatis minus reiciendis quaerat.
               </p>
             </div>
-            <div class="projects-text">
-              <h3 class="projects-name">Проект Prime</h3>
-              <p class="projects-descrition">Маркетинг</p>
+            <div class="projects__text-block">
+              <h3 class="projects__name">Проект Prime</h3>
+              <p class="projects__description">Маркетинг</p>
             </div>
           </a>
         </li>
-        <li class="projects-img-block">
-          <a class="a-tag-portfolio" href="#">
-            <div class="projects-hover-block">
+        <li class="projects">
+          <a class="projects__link" href="#">
+            <div class="projects__hover-block">
               <img class="img-tag" src="./images/portfolio/portfolio(5).jpg" width="370" alt="Логотип проекта" />
-              <p class="projects-hover-text">
+              <p class="projects__hover-text">
                 Lorem ipsum dolorrupti neque nostrum tempora vero alias provident excepturi. Sunt aspernatur veritatis
                 minus reiciendis quaerat.
               </p>
             </div>
-            <div class="projects-text">
-              <h3 class="projects-name">Проект Boxes</h3>
-              <p class="projects-descrition">Приложение</p>
+            <div class="projects__text-block">
+              <h3 class="projects__name">Проект Boxes</h3>
+              <p class="projects__description">Приложение</p>
             </div>
           </a>
         </li>
-        <li class="projects-img-block">
-          <a class="a-tag-portfolio" href="#">
-            <div class="projects-hover-block">
+        <li class="projects">
+          <a class="projects__link" href="#">
+            <div class="projects__hover-block">
               <img class="img-tag" src="./images/portfolio/portfolio(6).jpg" width="370" alt="Логотип проекта" />
-              <p class="projects-hover-text">
+              <p class="projects__hover-text">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, libero porro porro porro porro porro
                 porro porro porro porro porro porro porro porro porro! Reiciendis quaerat.
               </p>
             </div>
-            <div class="projects-text">
-              <h3 class="projects-name">Inspiration has no Borders</h3>
-              <p class="projects-descrition">Веб-сайт</p>
+            <div class="projects__text-block">
+              <h3 class="projects__name">Inspiration has no Borders</h3>
+              <p class="projects__description">Веб-сайт</p>
             </div>
           </a>
         </li>
-        <li class="projects-img-block">
-          <a class="a-tag-portfolio" href="#">
-            <div class="projects-hover-block">
+        <li class="projects">
+          <a class="projects__link" href="#">
+            <div class="projects__hover-block">
               <img class="img-tag" src="./images/portfolio/portfolio(7).jpg" width="370" alt="Логотип проекта" />
-              <p class="projects-hover-text">
+              <p class="projects__hover-text">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, libero porro! Animi, totam rnatur
                 veritatis minus reiciendis quaerat.
               </p>
             </div>
-            <div class="projects-text">
-              <h3 class="projects-name">Издание Limited Edition</h3>
-              <p class="projects-descrition">Дизайн</p>
+            <div class="projects__text-block">
+              <h3 class="projects__name">Издание Limited Edition</h3>
+              <p class="projects__description">Дизайн</p>
             </div>
           </a>
         </li>
-        <li class="projects-img-block">
-          <a class="a-tag-portfolio" href="#">
-            <div class="projects-hover-block">
+        <li class="projects">
+          <a class="projects__link" href="#">
+            <div class="projects__hover-block">
               <img class="img-tag" src="./images/portfolio/portfolio(8).jpg" width="370" alt="Логотип проекта" />
-              <p class="projects-hover-text">
+              <p class="projects__hover-text">
                 Lorem ipsum dolor sit amet consectetur, adipis totam accusamus. Rerum voluptate corrupti neque nostrum
                 tempora vero alias provident excepturi. Sunt aspernatur veritatis minus reiciendis quaerat.
               </p>
             </div>
-            <div class="projects-text">
-              <h3 class="projects-name">Проект LAB</h3>
-              <p class="projects-descrition">Маркетинг</p>
+            <div class="projects__text-block">
+              <h3 class="projects__name">Проект LAB</h3>
+              <p class="projects__description">Маркетинг</p>
             </div>
           </a>
         </li>
-        <li class="projects-img-block">
-          <a class="a-tag-portfolio" href="#">
-            <div class="projects-hover-block">
+        <li class="projects">
+          <a class="projects__link" href="#">
+            <div class="projects__hover-block">
               <img class="img-tag" src="./images/portfolio/portfolio(9).jpg" width="370" alt="Логотип проекта" />
-              <p class="projects-hover-text">
+              <p class="projects__hover-text">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat, libero porro! Animi, totam accusamus.
                 eiciendis quaerat.
               </p>
             </div>
-            <div class="projects-text">
-              <h3 class="projects-name">Growing Business</h3>
-              <p class="projects-descrition">Приложение</p>
+            <div class="projects__text-block">
+              <h3 class="projects__name">Growing Business</h3>
+              <p class="projects__description">Приложение</p>
             </div>
           </a>
         </li>
