--- a/portfolio.html
+++ b/portfolio.html
@@ -61,23 +61,23 @@
     <div class="container">
       <h2 hidden>Портфолио</h2>
       <ul class="button-list flex-container">
-        <li class="button-list__li">
+        <li class="button-list__item">
           <button class="button current-btn" type="button">Все</button>
         </li>
-        <li class="button-list__li">
+        <li class="button-list__item">
           <button class="button" type="button">
             Веб-сайты
           </button>
         </li>
-        <li class="button-list__li">
+        <li class="button-list__item">
           <button class="button" type="button">
             Приложения
           </button>
         </li>
-        <li class="button-list__li">
+        <li class="button-list__item">
           <button class="button" type="button">Дизайн</button>
         </li>
-        <li class="button-list__li">
+        <li class="button-list__item">
           <button class="button" type="button">
             Маркетинг
           </button>
